# packages-clib

./: CONFLICTS.txt  Makefile.in  bsd-crypt.c  cgi.c  cgi.pl  configure.in  crypt.c  crypt.pl  error.c  files.c  filesex.pl  form.c  md5passwd.c  memfile.c  memfile.pl  mime.c  mime.pl  nonblockio.c  process.c  process.pl  prolog_server.pl  readutil.c  rlimit.c  rlimit.pl  sha.pl  sha4pl.c  socket.c  socket.pl  streaminfo.c  streaminfo.pl  streampool.pl  syslog.c  syslog.pl  test.pl  test_cgi.pl  test_memfile.pl  test_socket.pl  test_uri.pl  time.c  time.pl  (+8 more)
maildrop/rfc2045/: Makefile.in  configure  configure.in  reformime.c  rfc2045.c  rfc2045.h  rfc2045_fromfd.c  rfc2045acchk.c  rfc2045acprep.c  rfc2045appendurl.c  rfc2045enomem.c  rfc2045mkboundary.c  rfc2045rewrite.c
maildrop/rfc822/: Makefile.in  configure  configure.in  rfc822_getaddrs.c  rfc822_parsedt.c  testsuite.c
